--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "dependencies": {
     "autoprefixer": "^10.2.3",
     "next": "10.0.5",
+    "nodemailer": "^6.4.17",
     "postcss": "^8.2.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-slick": "^0.28.0",
+    "sanitize-html": "^2.3.2",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^2.0.2"
   }
 }
